# GR5069

./: README.md  apigetfail.py
Desktop/Columbia/Fall 2022/MDS_FinalProject/ticketmaster_city/: README.md  pyproject.toml
Desktop/Columbia/Fall 2022/MDS_FinalProject/ticketmaster_city/src/ticketmaster_city/: Final Package - Package Vignette.ipynb
Desktop/Columbia/Fall 2022/MDS_FinalProject/ticketmaster_city/tests/: test_ticketmaster_city.py
